grammar.js
    class_definition: $ => seq(
      $.class_directive,
      $.super_directive,
      optional($.source_directive),
      repeat($.implements_directive),
      repeat(choice(
        $.annotation_directive,
        $.method_definition,
        $.field_definition,
      )),
    ),

    // class related
    class_directive: $ => seq(
      '.class',
      optional($.access_modifiers),
      $.class_identifier,
    ),
    super_directive: $ => seq('.super', $.class_identifier),
    source_directive: $ => seq('.source', $.string),
    implements_directive: $ => seq('.implements', $.class_identifier),

    field_definition: $ => seq(
      '.field',
      optional($.access_modifiers),
      $._field_body,
      optional(seq('=', $.value)),
      optional(seq(
        repeat($.annotation_directive),
        '.end field',
      )),
    ),

    // Method
    method_definition: $ => seq(
      '.method',
      optional($._method_access_modifiers),
      $.method_signature,
      repeat($.statement),
      '.end method',
    ),

    // annotation related
    annotation_directive: $ => seq(
      '.annotation',
      $.annotation_visibility,
      $.class_identifier,
      repeat($.annotation_property),
      '.end annotation',
    ),
    annotation_visibility: _ => choice('system', 'build', 'runtime'),
    annotation_property: $ => seq($.annotation_key, '=', $.annotation_value),
    annotation_key: _ => /\w+/,
    annotation_value: $ => choice(
      $.literal,
      $.body,
      $.list,
      $.enum_reference,
      $.subannotation_directive,
      $.class_identifier,
    ),

    param_directive: $ => prec.right(seq(
      '.param',
      $.parameter,
      optional(choice(
        seq(repeat($.annotation_directive), '.end param'),
        seq(optional(','), choice($.literal, alias($.identifier, $.param_identifier))),
      )),
    )),

    expression: $ => seq(
      $.opcode,
      commaSep($.value),
      '\n',
    ),

    opcode: _ => choice(...opcodes),
    locals_directive: $ => seq('.locals', $.number),
    prologue_directive: _ => '.prologue',
    identifier: _ => /<?[a-zA-Z_$][a-zA-Z0-9_\-$]*>?/,
    // class_identifier: _ => token(/L[^;]+;/),
    class_identifier: $ => seq(
      alias($.L, 'L'),
      // repeat1(seq(alias($._class_ident, $.identifier), '/')),
      // alias($._class_ident, $.identifier),
      sep1(alias($._class_ident, $.identifier), '/'),
      ';',
    ),

    // exclude :[SVIJFBZC]
    body: $ => choice(
      $._field_body,
      $._full_field_body,
      $.method_signature,
      alias($._method_signature_body, $.method_signature),
      $.full_method_signature,
    ),
    _field_body: $ => seq(
      alias(choice($.identifier, $.number), $.field_identifier),
      ':',
      alias($.type, $.field_type),
    ),
    method_signature: $ => seq(
      alias(
        choice(
          seq(optional('-'), $.identifier),
          $.number,
        ),
        $.method_identifier,
      ),
      $._method_signature_body,
    ),
    _method_signature_body: $ => seq(
      '(',
      alias(repeat($.type), $.parameters),
      ')',
      $.type,
    ),
    _full_field_body: $ => seq(
      choice($.class_identifier, $.array_type),
      '->',
      $._field_body,
    ),
    array_type: $ => seq('[', $.type),
    // primitives > identifiers
    // I don't know why this works, but for primitives in a statement's value,
    // the first choice is needed, and for primitives in a signature/return type,
    // the second choice is needed.
    // TODO: maybe figure out why?
    primitive_type: _ => choice(
      token(choice(...primitives)),
      token(prec(1, choice(...primitives))),
    ),

    access_modifiers: $ => repeat1($.access_modifier),

    _method_access_modifiers: $ => repeat1(choice($.access_modifier, 'constructor')),

    access_modifier: _ => choice(...access_flags.concat(restriction_flags)),

    variable: _ => token.immediate(/v\d+/),
    parameter: _ => token.immediate(/p\d+/),

    // lists
    list: $ => seq(
      '{',
      commaSep($.value),
      '}',
    ),
    number: $ => {
      const hex_literal = seq(
        optional(choice('-', '+')),
        /0[xX]/,
        /[\da-fA-F](_?[\da-fA-F])*/,
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits);

      const decimal_integer_literal = choice(
        '0',
        seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
      );

      const decimal_literal = choice(
        seq(optional('-'), decimal_integer_literal),
        decimal_digits,
        signed_integer,
      );

      return token(seq(
        choice(hex_literal, decimal_literal),
        alias(optional(/[LlSsTt]/), $.number_type),
      ));
    },

    float: $ => token(seq(
      /-?(\d+(\.\d+)?|\.\d+)([Ee][+-]?\d+)?/,
      alias(optional('f'), $.float_type),
    )),

    // FIXME: adding an optional 'f' doesn't work, I don't know why,
    // so this approach was used instead
    string: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $._escape_sequence,
      )),
      '"',
    ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token_ constructs containing a regexp
    // so as to obtain a node in the CST.
    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),

    _escape_sequence: $ => choice(
      prec(2, token.immediate(seq('\\', /[^abfnrtvxu'\"\\\?]/))),
      prec(1, $.escape_sequence),
    ),
    escape_sequence: _ => token.immediate(seq(
      '\\',
      choice(
        /[^xu0-7]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /u\{[0-9a-fA-F]+\}/,
      ),
    )),

    character: $ => seq(
      '\'',
      optional(choice(
        $._escape_sequence,
        /[^\\']/,
      )),
      '\'',
    ),

    comment: _ => token(seq('#', /.*/)),
  },
});
