test/corpus/classes
========================================================================
Test an empty class
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string)))

========================================================================
Test a class with a source file
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source "SourceFile.java"

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string
      (string_fragment))))

========================================================================
Test a class that implements an interface
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.implements LD/EF;

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string))
  (implements_directive
    (class_identifier
      (identifier)
      (identifier))))

========================================================================
Test a class that implements multiple interfaces
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.implements LD/EF;
.implements LG/HI;

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string))
  (implements_directive
    (class_identifier
      (identifier)
      (identifier)))
  (implements_directive
    (class_identifier
      (identifier)
      (identifier))))

========================================================================
Test a class with a non valid Java character
========================================================================

.class public LA/-BC;
.super Ljava/lang/Object;
.source ""

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string)))

========================================================================
Test a class without an access modifier
========================================================================

.class LA/-BC;
.super Ljava/lang/Object;
.source ""

---

(class_definition
  (class_directive
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string)))

========================================================================
Test a class with backtick-quoted descriptor segments
========================================================================

.class public L`com`/`test pkg`/Cls;
.super Ljava/lang/Object;

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier))))

========================================================================
Test a class with unicode characters in the descriptor
========================================================================

.class public Lcom/テスト/Cls;
.super Ljava/lang/Object;

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier))))

========================================================================
Test annotations with type values
========================================================================

# baksmali output for a Class-valued annotation element:
# @Meta(typeValue = byte[].class, typeArray = {int.class, String[].class})
.class public LSample;
.super Ljava/lang/Object;

.annotation runtime LMeta;
    typeArray = {
        I,
        [Ljava/lang/String;
    }
    typeValue = [B
.end annotation

---

(class_definition
  (comment)
  (comment)
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (annotation_directive
    (annotation_visibility)
    (class_identifier
      (identifier))
    (annotation_property
      (annotation_key)
      (annotation_value
        (list
          (primitive_type)
          (array_type
            (class_identifier
              (identifier)
              (identifier)
              (identifier))))))
    (annotation_property
      (annotation_key)
      (annotation_value
        (array_type
          (primitive_type))))))
