test/corpus/fields
========================================================================
Test a field without an access modifier
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.field a:Ljava/lang/String;

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string))
  (field_definition
    (field_identifier)
    (field_type
      (class_identifier
        (identifier)
        (identifier)
        (identifier)))))

========================================================================
Test fields with float and double literal values
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;

.field public static a:F = 1.5f
.field public static b:F = 2.5F
.field public static c:D = 1.5d
.field public static d:D = 3.0D
.field public static e:F = 10f
.field public static f:D = 0x1.8p3
.field public static g:F = -0x1p-2f
.field public static h:F = NaNf
.field public static i:D = NaNd
.field public static j:F = -Infinityf
.field public static k:D = InfinityD
.field public static l:D = 3.
.field public static m:D = 1.e5

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (NaN))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (NaN))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (Infinity))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (Infinity))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (float)))

========================================================================
Test fields with unusual simple names
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;

.field public static `weird name`:I
.field public static 2way:I
.field public static -dashed:I
.field public static データ:I
.field public static 123:I

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))))

========================================================================
Test string and character escape sequences
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;

.field public static a:Ljava/lang/String; = "tab \t newline \n quote \" backslash \\ unicode é"
.field public static b:C = '\n'
.field public static c:C = 'é'
.field public static d:C = 'x'

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (class_identifier
        (identifier)
        (identifier)
        (identifier)))
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (character
      (escape_sequence)))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (character))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type))
    (character)))

========================================================================
Test a field named after a keyword (kotlin's SafePublicationLazyImpl)
========================================================================

# Excerpt of baksmali output for kotlin's SafePublicationLazyImpl
# (libraries/stdlib/jvm/src/kotlin/util/LazyJVM.kt), which declares
# `private val final: Any` as an artificial field for safe publication.
.class final Lkotlin/SafePublicationLazyImpl;
.super Ljava/lang/Object;
.source "LazyJVM.kt"

# instance fields
.field private volatile _value:Ljava/lang/Object;

.field private final final:Ljava/lang/Object;

.method public constructor <init>(Lkotlin/jvm/functions/Function0;)V
    .locals 4
    .param p1    # Lkotlin/jvm/functions/Function0;
        .annotation build Lorg/jetbrains/annotations/NotNull;
        .end annotation
    .end param

    .prologue
    move-object v2, p0

    sget-object v3, Lkotlin/UNINITIALIZED_VALUE;->INSTANCE:Lkotlin/UNINITIALIZED_VALUE;

    iput-object v3, v2, Lkotlin/SafePublicationLazyImpl;->final:Ljava/lang/Object;

    return-void
.end method

---

(class_definition
  (comment)
  (comment)
  (comment)
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (source_directive
    (string
      (string_fragment)))
  (comment)
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (class_identifier
        (identifier)
        (identifier)
        (identifier))))
  (field_definition
    (access_modifiers
      (access_modifier)
      (access_modifier))
    (field_identifier)
    (field_type
      (class_identifier
        (identifier)
        (identifier)
        (identifier))))
  (method_definition
    (access_modifier)
    (method_signature
      (method_identifier)
      (parameters
        (class_identifier
          (identifier)
          (identifier)
          (identifier)
          (identifier)))
      (primitive_type))
    (locals_directive
      (number))
    (param_directive
      (parameter)
      (comment)
      (annotation_directive
        (annotation_visibility)
        (class_identifier
          (identifier)
          (identifier)
          (identifier)
          (identifier))))
    (prologue_directive)
    (expression
      (opcode)
      (variable)
      (parameter))
    (expression
      (opcode)
      (variable)
      (body
        (class_identifier
          (identifier)
          (identifier))
        (field_identifier)
        (field_type
          (class_identifier
            (identifier)
            (identifier)))))
    (expression
      (opcode)
      (variable)
      (variable)
      (body
        (class_identifier
          (identifier)
          (identifier))
        (field_identifier)
        (field_type
          (class_identifier
            (identifier)
            (identifier)
            (identifier)))))
    (expression
      (opcode))))

========================================================================
Test members with access modifier keywords as names
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;

.field public bridge:I
.field public final:I

.field public constructor:Ljava/lang/reflect/Constructor;

.method public final final()V
	iput-object p0, p0, LA/BC;->final:Ljava/lang/Object;
	iput-object p0, p0, LA/BC;->constructor:Ljava/lang/reflect/Constructor;
	return-void
.end method

---

(class_definition
  (class_directive
    (access_modifiers
      (access_modifier))
    (class_identifier
      (identifier)
      (identifier)))
  (super_directive
    (class_identifier
      (identifier)
      (identifier)
      (identifier)))
  (field_definition
    (access_modifiers
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier))
    (field_identifier)
    (field_type
      (primitive_type)))
  (field_definition
    (access_modifiers
      (access_modifier))
    (field_identifier)
    (field_type
      (class_identifier
        (identifier)
        (identifier)
        (identifier)
        (identifier))))
  (method_definition
    (access_modifier)
    (access_modifier)
    (method_signature
      (method_identifier)
      (primitive_type))
    (expression
      (opcode)
      (parameter)
      (parameter)
      (body
        (class_identifier
          (identifier)
          (identifier))
        (field_identifier)
        (field_type
          (class_identifier
            (identifier)
            (identifier)
            (identifier)))))
    (expression
      (opcode)
      (parameter)
      (parameter)
      (body
        (class_identifier
          (identifier)
          (identifier))
        (field_identifier)
        (field_type
          (class_identifier
            (identifier)
            (identifier)
            (identifier)
            (identifier)))))
    (expression
      (opcode))))
